Added Telemetry Domain + Infrastructure, next API
