# Server/ApiServer.Domain/Enums/TelemetrySessionStatus.cs
@@ -1,0 +1,8 @@
+namespace ApiServer.Domain.Enums;
+
+public enum TelemetrySessionStatus
+{
+    Incomplete,
+    Complete,
+    Aborted
+}
